--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ scikit-learn = "^0.24.2"
 Flask = "^2.0.1"
 
 [tool.poetry.dev-dependencies]
+pylint = "^2.9.3"
+black = "^21.6b0"
+isort = "^5.9.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
